# biptest

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  appveyor.yml  conanfile.txt
.github/workflows/: cmake-conan.yml  cmake-multi-platform.yml  cmake.yml  macos.yml  rust.yml
3D/: fem-konsole.FCStd  trarund.FCStd
comp/: CMakeLists.txt
comp/compa/: CMakeLists.txt  compa.cpp
comp/lib/: CMakeLists.txt  Component.cpp  Component.hpp  ComponentInfo.cpp  ComponentInfo.hpp  ComponentManager.cpp  ComponentManager.hpp  Environment.cpp  Environment.hpp  FactoryBase.cpp  FactoryBase.hpp  FactoryRegistry.cpp  FactoryRegistry.hpp  lcomp.cpp  lcomp.hpp  logging.cpp  logging.hpp
comp/main/: CMakeLists.txt  main.cpp
cpp20/: CMakeLists.txt  a.cpp  tuple.cpp
mqtt/rsmqtt/: Cargo.toml
mqtt/rsmqtt/src/: main.rs  messdata.rs  mqttcl.rs  web.rs
rust/f429-blinky/: Cargo.toml  readme.md
rust/f429-blinky/.cargo/: config.toml
rust/f429-blinky/.zed/: tasks.json
rust/f429-blinky/src/: main.rs
rust/hello/: Cargo.toml
rust/l432-7Segment/: Cargo.toml  readme.md
rust/l432-7Segment/src/: main.rs
rust/mqtt-fri/: Cargo.toml
rust/mqtt-fri/src/: main.rs
rust/stm32-hal-quickstart/: Cargo.toml  README.md
rust/stm32-hal-quickstart/.cargo/: config.toml
rust/stm32-hal-quickstart/src/: init.rs  main.rs  setup.rs
rust/stm32_embassy/: Cargo.toml  memory.x  readme.md
rust/stm32_embassy/src/: main.rs
test-boost/: CMakeLists.txt  README.md
test-boost/linktest/: CMakeLists.txt  README.md  afunc.h  afunc1.cpp  afunc2.cpp  bfunc.cpp  bfunc.h  bfuncb.cpp  bfuncb.h  cfunc.cpp  cfunc.h  texemain.cpp  texemain2.cpp  visconfig.h
test-boost/shmem/: CMakeLists.txt  tashmem.cpp  tbshmem.cpp  tcomp.cpp  tcshmem.cpp  tdoppler.cpp  tdshmem.cpp  teshmem.cpp  tfnet.cpp  tmon.cpp  tserial.cpp  tterm.cpp
test-boost/shmem/gmonitor/: CMakeLists.txt  gmonitor.cpp
test-boost/shmem/rashm/: CompMap.h  Console.cpp  Console.h  FieldAdapter.h  FieldAdapterFactory.h  Header.cpp  Header.h  Monitor.cpp  Monitor.h  Packet.h  Segment.cpp  Segment.h  SegmentReader.h  SegmentWriter.h  data_functors.h  default_id.h  index_vector.h  rashm_traits.h  rashm_utils.h  shm_net.h
test-boost/shmem/shmem/: ShmReader.h  ShmWriter.h  shmem.cpp  shmem.h  shmem_base.h  shmem_traits.h
test-boost/shmem/ssc/: CMakeLists.txt  DepthData.cpp  DepthData.h  NdmcData.cpp  NdmcData.h  NdmcSim.cpp  depth_proc.cpp  watcher.cpp
test-boost/shmem/sscshm/: AbstractScaleSignal.h  CMakeLists.txt  DepthData.h  DepthDataFieldAdapterFactory.cpp  NdmcData.h  NdmcDataFieldAdapterFactory.cpp  NdmcSim.cpp  SscFieldAdapterFactory.cpp  SscFieldAdapterFactory.h  all_ssc_data_types.h  depth_proc.cpp  nettrans.cpp  shmonitor.cpp  ssc_signal_values.h  watcher.cpp
test-boost/shmem/test/: ComProc.cpp  ComProc.h  MsgCollector.cpp  MsgCollector.h  SubProc.cpp  SubProc.h  TestDataA.cpp  TestDataA.h  TestDataAFieldAdapterFactory.cpp  TestDataAMonitor.cpp  TestDataB.cpp  TestDataB.h  TestGenerator.cpp  TestGenerator.h  TestTypes.h  UnitTestData.cpp  UnitTestData.h  all_data_types.h  test_signal_values.h  txcomp.cpp  txmon.cpp  txnet.cpp  txterm.cpp  unitconfig.cpp  unitconfig.h  unitproc.cpp  unitrunner.cpp
test-boost/tfuture/: CMakeLists.txt  FutureAdapter.hpp  tfuture.cpp  tiosfut.cpp
test-boost/tmath/: CMakeLists.txt  autodiff.cpp
test-boost/tother/: CMakeLists.txt  tflat_map.cpp  thana.cpp  titerator.cpp  tunits1.cpp  tunits2.cpp
test-boost/tprocess/: CMakeLists.txt  tprocess.cpp
test-other/: CMakeLists.txt  Makefile  a.cpp
thamessage/: CMakeLists.txt  a.cpp  message.cpp  message.hpp
tmp/: be-gw.stl
web/: README.md
web/testapp1/: app.js  package.json
web/testapp1/views/: index.pug
