[package]
name = "rsmqtt"
version = "0.1.0"
authors = ["rasituxvm <rasituxvm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-protocol = "0.11"
log = "0.4"
clap = "2"
env_logger = "0.8"
uuid = { version = "0.8", features = ["v4"] }
json = "*"

